<resources>
    <string name="app_name">Meds</string>

    <!-- login page and sign up page -->
    <string name="phone">"Phone Number"</string>
    <string name="password">Password</string>
    <string name="sign_up"> "Sign Up"</string>
    <string name="sign_in"> "Sign In"</string>
    <string name="registering"> "Transferring to verification page"</string>
    <string name="country_code"> "+65"</string>

    <!-- profile page -->
    <string name="sign_out"> "Sign Out"</string>

    <!--navigation bar-->
    <string name="health_summary">Health Summary</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <!--start page-->
    <string name="welcome">"Welcome !"</string>
    <string name="activity_signin">"Sign in"</string>
    <string name="content_description">"App Icon"</string>

    <!--support page-->
    <string name="support">"Support"</string>
    <string name="view_support">"View Support"</string>
    <string name="submit">"Submit Rating"</string>
    <string name="rating">"How would you rate our app?"</string>
    <string name="FAQ">"Need help? Check out our FAQ!"</string>

    <!--verification page-->
    <string name="verification_failed">"Verification failed"</string>
    <string name="signin_failed">"Sign in failed"</string>
    <string name="register_failed">"Sign up failed"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="verification">"Verification"</string>
    <string name="verification_code">Verification Code</string>
    <string name="confirm">Confirm</string>

    <string name="search_hospital">Hospital</string>
    <string name="search_disease">Disease</string>

    <!-- Profile -->
    <string name="btnEditProfile">Edit Profile</string>
    <string name="button_save">Save</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_firstname">First Name</string>
    <string name="profile_lastname">Last Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_dobDD">DD</string>
    <string name="profile_dobMM">MM</string>
    <string name="profile_dobYYYY">YYYY</string>
    <string name="profile_height">Height (cm)</string>
    <string name="profile_weight">Weight (kg)</string>
    <string name="profile_email">Email</string>

    <!--Health Summary Menu-->
    <string-array name="option_health_summary">
        <item>Body-Mass Index</item>
        <item>Vitals</item>
        <item>Others</item>
    </string-array>
    <!--Vitals Menu-->
    <string-array name="option_vitals">
        <item>Alcohol Consumption</item>
        <item>Blood Glucose</item>
        <item>Blood Pressure (Systolic)</item>
        <item>Blood Pressure (Diastolic)</item>
        <item>Heart Rate</item>
        <item>Insulin</item>
        <item>Pulse Rate</item>
        <item>Tricep Skin Thickness</item>
    </string-array>

    <!--BMI Menu-->
    <string-array name="option_bmi">
        <item>Body-Mass Index</item>
        <item>Height</item>
        <item>Weight</item>
    </string-array>

    <string name="text_all_data">All Recorded Data</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="text_measurement">Measurement</string>

    <string name="button_show_all">Show All</string>

    <string name="hint_measurement">Your measurement...</string>

    <string name="text_dialog_datetime">Date and Time</string>
    <string name="text_dialog_measurement">Measurement</string>
    <string name="text_dialog_title">Your Record</string>

    <string name="comment_normal">Great! Your measurement is under the normal condition.</string>
    <string name="comment_abnormal">Uh oh! It seems that you are not in the normal range.\n
        Try to maintain between %d and %d.</string>
    <string name="action_settings">action_settings_strings</string>
    <string name="search_title">Search</string>
    <string name="button_chronic_diagnosis">Chronic Disease Diagnosis</string>
    <string name="button_common_diagnosis">Common Disease Diagnosis</string>
    <string name="button_submit">SUBMIT</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>

    <string name="disease_description">Description</string>
    <string name="disease_prevention">Prevention</string>
    <string name="button_gender_male">Male</string>
    <string name="button_gender_female">Female</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="button_heart_disease">Heart Disease+</string>
    <string name="button_diabetes">Diabetes+</string>
    <string name="text_title_chronic_diagnosis">Which chronic disease are you concerned with?</string>
    <string name="text_diabetes_age">Age</string>
    <string name="text_diabetes_BMI">BMI</string>
    <string name="text_diabetes_insulin">Insulin</string>
    <string name="text_diabetes_triceps">Triceps skin thickness</string>
    <string name="text_diabetes_blood_pressure">Blood pressure</string>
    <string name="text_diabetes_plasma_glucose">Plasma glucose</string>
    <string name="text_diabetes_pregnancy_count">Number of pregnancies</string>
    <string name="button_home">Home</string>
    <string name="text_result_diagnosis_suggestion">For further information please go to the hospital</string>
    <string name="text_result_diagnosis_percentage">Percentage</string>
    <string name="text_diagnosis_result">Diagnose Result</string>
    <string name="text_chronic_diagnosis_glucose">Glucose</string>
    <string name="text_chronic_diagosis_heart_rate">Heart Rate</string>
    <string name="text_chronic_diagnosis_diastolic">Diastolic blood pressure</string>
    <string name="text_chronic_diagnosis_systolic">Systolic blood pressure</string>
    <string name="text_chronic_diagnosis_alcohol">Total Alcohol</string>
    <string name="hint_boolean">(1 = Yes or 0 = No)</string>
    <string name="text_chronic_diagnosis_hypertension">Do you have hypertension?</string>
    <string name="text_chronic_diagnosis_stroke">Do you have stroke?</string>
    <string name="text_chronic_diagnosis_cigarrete">Cigarettes per day</string>
    <string name="text_chronic_diagnosis_smoker">Current Smoker</string>
    <string name="hint_boolean_gender">(1 = Male or 0 = Female)</string>
    <string name="text_chronic_diagnosis_gender">Gender</string>

    <string name="no_recorded_data_height">-Height-</string>
    <string name="no_recorded_data_weight">-Weight-</string>
    <string name="toggle_button_gender_on">Male</string>
    <string name="toggle_button_gender_off">Female</string>
    <string name="toggle_button_general_off">No</string>
    <string name="toggle_button_general_on">Yes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_pregnancy_count">Pregnancy Count</string>
    <string name="text_pregnancy_not_suitable">Pregnancy count is not \n available for male</string>

</resources>
