<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/healthSummaryFragment"
        android:title="@string/health_summary"
        android:icon="@drawable/ic_healthsummary"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/SearchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/DiagnosisFragment"
        android:title="@string/diagnosis"
        android:icon="@drawable/ic_diagnosis"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/ProfileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="3"/>



</menu>