<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_health_summary"
        android:icon="@drawable/ic_healthsummary"
        android:title="@string/health_summary"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/navigation_diagnosis"
        android:icon="@drawable/ic_diagnosis"
        android:title="@string/diagnosis"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:orderInCategory="3"/>
</menu>