<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    tools:context=".fragment.OtherSummaryFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_not_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_pregnancy_not_suitable"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/linear_layout_pregnancy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_pregnancy_count"
                    android:textColor="@android:color/black" />

                <com.example.guavas.view.PlusMinusEditText
                    android:id="@+id/pregnancy_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_chronic_diagnosis_cigarrete"
                android:textColor="@android:color/black" />

            <com.example.guavas.view.PlusMinusEditText
                android:id="@+id/cigarette_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_chronic_diagnosis_stroke"
                android:textColor="@android:color/black" />

            <ToggleButton
                android:id="@+id/toggle_button_stroke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/toggle_selector"
                android:textColor="@android:color/white"
                android:textOff="@string/toggle_button_general_off"
                android:textOn="@string/toggle_button_general_on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_chronic_diagnosis_hypertension"
                android:textColor="@android:color/black" />

            <ToggleButton
                android:id="@+id/toggle_button_hypertension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/toggle_selector"
                android:textColor="@android:color/white"
                android:textOff="@string/toggle_button_general_off"
                android:textOn="@string/toggle_button_general_on" />
        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_red"
            android:text="@string/button_save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/rectangle_red"
            android:text="@string/button_home"
            android:textColor="@android:color/white" />
    </FrameLayout>
</LinearLayout>