<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:text="@string/text_title_chronic_diagnosis"
        />
    <Button
        android:id="@+id/diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_diabetes"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:padding = "8dp"
        android:background="@drawable/rectanglewhite"/>
    <Button
        android:id = "@+id/Heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_heart_disease"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:padding = "8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectanglewhite"/>
</LinearLayout>