<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/support"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_centerHorizontal="true"
        android:text="@string/FAQ"
        android:textSize="18sp" />

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:background="@color/creamyyellow"
        android:divider="@color/black"
        android:dividerHeight="0.5dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/rateapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="390dp"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:theme="@style/RatingBar" />

    <Button
        android:id="@+id/submitrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectanglewhite"
        android:textColor="@android:color/white"
        android:text="@string/submit" />
</RelativeLayout>